Change exit message in index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         "Like… really sure?",
         "Alright, that stings a little.",
         "Okay, noted.",
-        "Alright then… I'm out."
+        "Let's make this harder, shall we?"
       ];
 
       if (noClickCount <= messages.length) {
