Change email sender name from 'Ebube' to 'Vic'

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     function sendEmail(response) {
       emailjs.send("service_dcanddh", "template_s56q12m", {
-        name: "Ebube",
+        name: "Vic",
         response: response
       });
     }
