Refactor CSS styles for layout improvements
Adjusted styles for better layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -3,122 +3,153 @@
 <head>
   <meta charset="UTF-8" />
   <title>Dear Ebube</title>
-  <style>
+<style>
+  body {
+    font-family: "Segoe UI", sans-serif;
+    background: radial-gradient(circle at top, #ffb3c6, #ffd6e0, #fff0f5);
+    text-align: center;
+    padding: 20px;
+    color: #4a0033;
+  }
+
+  .card {
+    background: #fff0f6;
+    border-radius: 20px;
+    padding: 25px 20px 35px;
+    max-width: 500px;
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+    position: relative;
+    overflow: hidden;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+  }
+
+  h2 {
+    font-size: 1.1rem;
+    margin-top: 0;
+    color: #b3005a;
+  }
+
+  .question {
+    font-size: 1rem;
+    margin: 20px 0 30px;
+    line-height: 1.6;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    flex-wrap: wrap;
+  }
+
+  button {
+    border: none;
+    border-radius: 999px;
+    padding: 12px 24px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.2s;
+  }
+
+  #yesBtn {
+    background: #ff4b8b;
+    color: white;
+    box-shadow: 0 6px 15px rgba(255, 75, 139, 0.4);
+  }
+
+  #yesBtn:hover {
+    transform: translateY(-2px) scale(1.03);
+    box-shadow: 0 8px 18px rgba(255, 75, 139, 0.6);
+    background: #ff2f78;
+  }
+
+  #noBtn {
+    background: #ffe0f0;
+    color: #b3005a;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+
+  #noBtn:hover {
+    transform: translateY(-2px);
+  }
+
+  .footer {
+    margin-top: 25px;
+    font-size: 0.9rem;
+    color: #7a0044;
+  }
+
+  .tiny {
+    font-size: 0.8rem;
+    opacity: 0.8;
+  }
+
+  .floating-hearts {
+    position: fixed;
+    pointer-events: none;
+    inset: 0;
+    overflow: hidden;
+    z-index: -1;
+  }
+
+  .heart {
+    position: absolute;
+    font-size: 20px;
+    animation: floatUp 6s linear infinite;
+    opacity: 0.8;
+  }
+
+  @keyframes floatUp {
+    0% {
+      transform: translateY(100vh) scale(0.8);
+      opacity: 0;
+    }
+    20% {
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(-10vh) scale(1.4);
+      opacity: 0;
+    }
+  }
+
+  /* 📱 Mobile responsiveness */
+  @media (max-width: 480px) {
     body {
-      font-family: "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #ffb3c6, #ffd6e0, #fff0f5);
-      text-align: center;
-      padding: 40px;
-      color: #4a0033;
+      padding: 10px;
     }
 
     .card {
-      background: #fff0f6;
-      border-radius: 20px;
-      padding: 30px 25px 40px;
-      max-width: 500px;
-      margin: 0 auto;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-      position: relative;
-      overflow: hidden;
+      padding: 20px 15px 30px;
     }
 
     h1 {
-      font-size: 2rem;
-      margin-bottom: 10px;
+      font-size: 1.5rem;
     }
 
     h2 {
-      font-size: 1.2rem;
-      margin-top: 0;
-      color: #b3005a;
+      font-size: 1rem;
     }
 
     .question {
-      font-size: 1.05rem;
-      margin: 20px 0 30px;
-      line-height: 1.6;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      flex-wrap: wrap;
+      font-size: 0.95rem;
     }
 
     button {
-      border: none;
-      border-radius: 999px;
-      padding: 12px 24px;
+      width: 100%;
+      max-width: 250px;
+      padding: 14px;
       font-size: 1rem;
-      cursor: pointer;
-      transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.2s;
     }
-
-    #yesBtn {
-      background: #ff4b8b;
-      color: white;
-      box-shadow: 0 6px 15px rgba(255, 75, 139, 0.4);
-    }
-
-    #yesBtn:hover {
-      transform: translateY(-2px) scale(1.03);
-      box-shadow: 0 8px 18px rgba(255, 75, 139, 0.6);
-      background: #ff2f78;
-    }
-
-    #noBtn {
-      background: #ffe0f0;
-      color: #b3005a;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      position: relative;
-    }
-
-    #noBtn:hover {
-      transform: translateY(-2px);
-    }
-
-    .footer {
-      margin-top: 25px;
-      font-size: 0.9rem;
-      color: #7a0044;
-    }
-
-    .tiny {
-      font-size: 0.8rem;
-      opacity: 0.8;
-    }
-
-    .floating-hearts {
-      position: fixed;
-      pointer-events: none;
-      inset: 0;
-      overflow: hidden;
-      z-index: -1;
-    }
-
-    .heart {
-      position: absolute;
-      font-size: 20px;
-      animation: floatUp 6s linear infinite;
-      opacity: 0.8;
-    }
-
-    @keyframes floatUp {
-      0% {
-        transform: translateY(100vh) scale(0.8);
-        opacity: 0;
-      }
-      20% {
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-10vh) scale(1.4);
-        opacity: 0;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <div class="floating-hearts" id="heartsContainer"></div>
