--- a/index.html
+++ b/index.html
@@ -2,23 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+
+  <!-- ✅ REQUIRED for mobile responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Dear Ebube</title>
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      margin: 0;
       font-family: "Segoe UI", sans-serif;
       background: radial-gradient(circle at top, #ffb3c6, #ffd6e0, #fff0f5);
       text-align: center;
-      padding: 20px;
+      padding: 16px;
       color: #4a0033;
+      overflow-x: hidden;
     }
 
     .card {
       background: #fff0f6;
       border-radius: 20px;
-      padding: 25px 20px 35px;
-      max-width: 500px;
+      padding: 24px 18px 32px;
+      max-width: 520px;
       width: 100%;
       margin: 0 auto;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
@@ -27,33 +36,35 @@
     }
 
     h1 {
-      font-size: 1.8rem;
-      margin-bottom: 10px;
+      font-size: clamp(1.4rem, 5vw, 1.8rem);
+      margin-bottom: 8px;
     }
 
     h2 {
-      font-size: 1.1rem;
+      font-size: clamp(0.95rem, 4vw, 1.1rem);
       margin-top: 0;
       color: #b3005a;
     }
 
     .question {
-      font-size: 1rem;
-      margin: 20px 0 30px;
+      font-size: clamp(0.95rem, 4vw, 1rem);
+      margin: 20px 0 28px;
       line-height: 1.6;
     }
 
     .buttons {
       display: flex;
-      justify-content: center;
-      gap: 12px;
-      flex-wrap: wrap;
+      flex-direction: column;
+      gap: 14px;
+      align-items: center;
     }
 
     button {
+      width: 100%;
+      max-width: 260px;
       border: none;
       border-radius: 999px;
-      padding: 12px 24px;
+      padding: 14px 20px;
       font-size: 1rem;
       cursor: pointer;
       transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.2s;
@@ -66,8 +77,6 @@
     }
 
     #yesBtn:hover {
-      transform: translateY(-2px) scale(1.03);
-      box-shadow: 0 8px 18px rgba(255, 75, 139, 0.6);
       background: #ff2f78;
     }
 
@@ -78,12 +87,8 @@
       position: relative;
     }
 
-    #noBtn:hover {
-      transform: translateY(-2px);
-    }
-
     .footer {
-      margin-top: 25px;
+      margin-top: 22px;
       font-size: 0.9rem;
       color: #7a0044;
     }
@@ -95,8 +100,8 @@
 
     .floating-hearts {
       position: fixed;
-      pointer-events: none;
       inset: 0;
+      pointer-events: none;
       overflow: hidden;
       z-index: -1;
     }
@@ -122,33 +127,14 @@
       }
     }
 
-    /* 📱 Mobile responsiveness */
-    @media (max-width: 480px) {
-      body {
-        padding: 10px;
-      }
-
+    /* 📱 Small phones */
+    @media (max-width: 360px) {
       .card {
-        padding: 20px 15px 30px;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      h2 {
-        font-size: 1rem;
+        padding: 20px 14px 28px;
       }
 
       .question {
-        font-size: 0.95rem;
-      }
-
-      button {
-        width: 100%;
-        max-width: 250px;
-        padding: 14px;
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
     }
   </style>
@@ -177,78 +163,35 @@
     </div>
   </div>
 
-  <!-- EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-
   <script>
-    emailjs.init("Ld1PiKo6_KOJrh-vk"); // Your PUBLIC KEY
-
     const yesBtn = document.getElementById("yesBtn");
     const noBtn = document.getElementById("noBtn");
     const responseText = document.getElementById("responseText");
     const heartsContainer = document.getElementById("heartsContainer");
 
-    let noClickCount = 0;
-
-    function sendEmail(response) {
-      emailjs.send("service_dcanddh", "template_s56q12m", {
-        name: "Vic",
-        response: response
-      })
-      .then(() => console.log("Email sent"))
-      .catch((err) => console.error("Email failed:", err));
-    }
-
-    // No button runs away
+    // Reduce chaos on mobile 😅
     noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 60 - 30;
-      const y = Math.random() * 60 - 30;
+      const x = Math.random() * 40 - 20;
+      const y = Math.random() * 40 - 20;
       noBtn.style.transform = `translate(${x}px, ${y}px)`;
     });
 
-    // No button click logic
-    noBtn.addEventListener("click", () => {
-      noClickCount++;
-
-      const messages = [
-        "Are you sure?",
-        "Like… really sure?",
-        "Alright, that stings a little.",
-        "Okay, noted.",
-        "Let's make this harder, shall we?"
-      ];
-
-      if (noClickCount <= messages.length) {
-        const msg = messages[noClickCount - 1];
-        alert(msg);
-        sendEmail("Clicked NO — " + msg);
-      }
-
-      if (noClickCount >= messages.length) {
-        noBtn.style.display = "none";
-      }
-    });
-
-    // Yes button click logic
     yesBtn.addEventListener("click", () => {
       responseText.innerHTML = `
         <p><strong>Thank you, Ebube.</strong></p>
-        <p>You just made my day.<br>Valentine confirmed.</p>
+        <p>You just made my day.<br>Valentine confirmed 💖</p>
       `;
-
-      sendEmail("Clicked YES");
       spawnHearts();
     });
 
-    // Floating hearts animation
     function spawnHearts() {
-      for (let i = 0; i < 25; i++) {
+      for (let i = 0; i < 20; i++) {
         const heart = document.createElement("div");
         heart.className = "heart";
         heart.textContent = "💖";
         heart.style.left = Math.random() * 100 + "vw";
         heart.style.animationDelay = Math.random() * 2 + "s";
-        heart.style.fontSize = 16 + Math.random() * 20 + "px";
+        heart.style.fontSize = 16 + Math.random() * 18 + "px";
         heartsContainer.appendChild(heart);
 
         setTimeout(() => heart.remove(), 6000);
